<resources>
    <string name="app_name">Car Remote</string>
    <string name="title_activity_control_panel">Control Panel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">user. name@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="bluetooth_devices_status">No Paired Devices Found</string>
    <string name="gps_adapter_status">No Network Available</string>

    <string name="navigation_drawer_action1">Action 1</string>
    <string name="navigation_drawer_action2">Action 2</string>
    <string name="navigation_drawer_action3">Location</string>
    <string name="navigation_drawer_action4">Settings</string>

    <string name="navigation_button1">Options</string>
    <string name="navigation_button2">Engine</string>
    <string name="navigation_button3">Windows</string>

    <string name="controlPanel_menu_action1">Reconnect</string>
    <string name="controlPanel_menu_action2">Disconnect</string>

    <string name="refresh">Refresh</string>

    <string name="menu_gps">Location</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_hydraulic">Hydraulic</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
