<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_engine"
        android:icon="@drawable/ic_time_to_leave_black_24dp"
        android:title="@string/navigation_drawer_action1" />
    <item
        android:id="@+id/nav_start_engine"
        android:icon="@drawable/ic_time_to_leave_black_24dp"
        android:title="@string/navigation_drawer_action2" />
    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_gps_fixed_black_24dp"
        android:title="@string/navigation_drawer_action3" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/navigation_drawer_action4" />

    <!--<group android:checkableBehavior="single">

    </group>-->

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item> -->

</menu>
