<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action1"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="@string/navigation_button1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action2"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_engine_icon"
        android:title="@string/navigation_button2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action3"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_airline_seat_recline_extra_black_24dp"
        android:title="@string/navigation_button3"
        app:showAsAction="ifRoom" />
</menu>